@startuml it_polimi_ingsw_common_transport
' Generated by tools/uml/generate-detailed.py. Do not edit by hand.
!pragma layout smetana
skinparam shadowing false
skinparam classAttributeIconSize 0
title it.polimi.ingsw.common.transport

class AbstractChannel {
  -LOG : Logger
  -CLOCK : ScheduledExecutorService
  -listener : AtomicReference<ChannelListener<I>>
  -expected : Class<I>
  -open : AtomicBoolean
  -lastHeard : AtomicLong
  -heartbeat : AtomicReference<ScheduledFuture<?>>
  -liveness : Liveness
  -id : String
  --
  +listenWith() : void
  +start() : void
  +transmit() : void
  +release() : void
  +deliver() : void
  +failed() : void
  +send() : void
  +isOpen() : boolean
  +close() : void
  +silence() : Optional<Duration>
}
class AbstractListeningPost {
  -connected : Set<Channel<Event, Command>>
  -doorman : Doorman
  -liveness : Liveness
  --
  +liveness() : Liveness
  +welcome() : ChannelListener<Command>
  +forgetClosed() : void
  +connectionCount() : int
  +close() : void
  +stopListening() : void
}
interface Channel {
  +send() : void
  +isOpen() : boolean
  +close() : void
}
interface ChannelListener {
  +received() : void
  +closed() : void
}
class DefaultPorts {
  -SOCKET : int
  -RMI : int
}
interface Doorman {
  +answer() : ChannelListener<Command>
}
interface Doorway {
  +port() : int
  +connectionCount() : int
  +close() : void
}
interface Envelope {
}
class Message <<record>> {
}
class KeepAlive <<record>> {
}
class Goodbye <<record>> {
}
class Liveness <<record>> {
  -DEFAULT : Liveness
  --
  +missedBeatsAllowed() : long
}
class LocalChannel {
  -peer : LocalChannel<I, O>
  --
  +connect() : static <O extends Serializable, I extends Serializable> Pair<O, I>
  +transmit() : void
  +release() : void
}
class Pair <<record>> {
}
class TransportException {
  -serialVersionUID : long
}

Doorway <|.. AbstractListeningPost
Envelope <|.. Message
Envelope <|.. KeepAlive
Envelope <|.. Goodbye
@enduml
